# ped

./: .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  NOTICE  README.html  README.rst  azure-pipelines.yml  dev-requirements.txt  ped.py  pyproject.toml  setup.cfg  setup.py  tasks.py  test_ped.py  tox.ini
.github/workflows/: build-release.yml
ped/: __init__.py  bashcomplete.py  guess_module.py  install_completion.py  ped_bash_completion.sh  ped_zsh_completion.zsh  pypath.py  style.py
src/ped/: __init__.py  guess_module.py  install_completion.py  ped_bash_completion.sh  pypath.py  style.py
tests/: test_ped.py
