[project]
name = "ped"
version = "3.0.0"
description = "Quickly open Python modules in your text editor."
readme = "README.rst"
license = { file = "LICENSE" }
authors = [{ name = "Steven Loria", email = "sloria1@gmail.com" }]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Shells",
]
keywords = ["commandline", "cli", "open", "editor", "editing"]
requires-python = ">=3.8"

[project.scripts]
ped = "ped:main"

[project.urls]
Issues = "https://github.com/sloria/ped/issues"
Source = "https://github.com/sloria/ped/"

[project.optional-dependencies]
dev = ["ped[tests]", "tox"]
tests = ["pytest", "pytest-mock", "scripttest==1.3"]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = ["tests/", "NOTICE", "tox.ini"]
exclude = ["tests/test-output"]

[tool.ruff]
src = ["src"]
fix = true
show-fixes = true
show-source = true

[tool.ruff.lint]
select = [
  "B",  # flake8-bugbear
  "E",  # pycodestyle error
  "F",  # pyflakes
  "I",  # isort
  "UP", # pyupgrade
  "W",  # pycodestyle warning
]

[tool.mypy]
ignore_missing_imports = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
